[travis] more checks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: python
+language: generic
 sudo: required
 dist: trusty
 
@@ -9,12 +9,17 @@ addons:
     - cmake
     - cmake-data
 
+before_script:
+    - git clone --branch ${DUNE_BRANCH} --depth 1 https://gitlab.dune-project.org/core/dune-common.git
+    - git clone --depth 1 https://github.com/wwu-numerik/dune-demos-bin.git local/bin
+    - sudo -E apt-get build-dep libdune-common-2.2.1 -y
 script:
-    -|
-    for i in $(git ls-files | \grep -Ev "README|.travis.yml") ; do
-        echo "checking ${i}"
-        bash ${i}
-    done
+    - |
+        for i in $(git ls-files | \grep -Ev "README|.travis.yml") ; do
+            echo "checking ${i}"
+            bash ${i}
+            OPTS=${i} ${HOME}/local/bin/build_dune_modules.py
+        done
 
 notifications:
   email:
@@ -24,3 +29,9 @@ notifications:
 branches:
   except:
     - gh-pages
+
+matrix:
+    include:
+    - env: DUNE_BRANCH=master
+    - env: DUNE_BRANCH=releases/2.3
+    - env: DUNE_BRANCH=releases/2.4
