--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
 
 before_script:
     - git clone --branch ${DUNE_BRANCH} --depth 1 https://gitlab.dune-project.org/core/dune-common.git
-    - git clone --depth 1 https://github.com/wwu-numerik/dune-demos-bin.git local/bin
     - sudo -E apt-get build-dep libdune-common-2.2.1 -y
 script:
     - set -e
@@ -19,7 +18,10 @@ script:
         for i in $(git ls-files | \grep -Ev "README|.travis.yml") ; do
             echo "checking ${i}"
             bash ${i}
-            OPTS=${i} ./local/bin/build_dune_modules.py
+            ./dune-common/bin/dunecontrol --opts=${i} info 1> /dev/null
+            pushd dune-common
+            git clean -xdf
+            popd
         done
 
 notifications:
