--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ addons:
     - cmake
     - cmake-data
 
+before_install:
+  # workaround for gnutls bug is using git built against curl-openssl
+  - sudo -E add-apt-repository -y ppa:pymor/travis && sudo -E aptitude update && sudo -E aptitude install git -yq
+
 before_script:
     - git clone --branch ${DUNE_BRANCH} https://gitlab.dune-project.org/core/dune-common.git
     - sudo -E apt-get build-dep libdune-common-2.2.1 -y
