[travis] also test the dune 2.5 release branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,3 +43,4 @@ matrix:
     - env: DUNE_BRANCH=master
     - env: DUNE_BRANCH=releases/2.3
     - env: DUNE_BRANCH=releases/2.4
+    - env: DUNE_BRANCH=releases/2.5
