--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
         for i in $(git ls-files | \grep -Ev "README|.travis.yml") ; do
             echo "checking ${i}"
             bash ${i}
-            shellcheck ${i}
+            shellcheck -s bash ${i}
             ./dune-common/bin/dunecontrol --opts=${i} info 1> /dev/null
             pushd dune-common
             git clean -xdf
