--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - sudo -E add-apt-repository -y ppa:pymor/travis && sudo -E aptitude update && sudo -E aptitude install git -yq
 
 before_script:
-    - git clone --branch ${DUNE_BRANCH} https://gitlab.dune-project.org/core/dune-common.git
+    - git clone --branch ${DUNE_BRANCH} https://github.com/dune-mirrors/dune-common.git
     - sudo -E apt-get build-dep libdune-common-2.2.1 -y
 script:
     - set -e
